<resources>
    <string name="app_name">ToDo</string>
    <string name="list_item_text">Купить что-то</string>
    <string name="more_information_text">more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_item_button">add new item button</string>
    <string name="main_screen_title">Мои дела</string>
    <string name="completed_text">Выполнено — 0</string>
    <string name="eye_button">eye_button</string>
    <string name="cancel_button">cancel button</string>
    <string name="save_button_text">СОХРАНИТЬ</string>
    <string name="hint_text">Что надо сделать…</string>
    <string name="importance_text">Важность</string>
    <string name="hint_no">Нет</string>
    <string name="do_before">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="edit">Переименовать</string>
    <string name="OkText">Ок</string>
    <string name="no_importance">Нет</string>
    <string name="custom_bottom_menu_title">Переименовать</string>
    <string name="low_importance">Низкий</string>
    <string name="high_importance"><font color="#FF3B30">!! Высокий</font></string>
    <string name="default_date_text">2 июня 2021</string>
    <string name="til_error">Поле текста не может быть пустым!</string>
    <string name="medium_priority">Обычная</string>
    <string name="low_priority">Низкая</string>
    <string name="high_priority"><font color="#FF3B30">!! Высокая</font></string>
    <string name="todo">Добавьте ToDo по кнопке ниже :)</string>
    <string name="icon">icon</string>
    <string name="cancel">Отмена</string>
    <string name="auth_token_key">auth token jey</string>
    <string name="id">Войти с Яндекс ID</string>
    <string name="skip_auth">Продолжить без авторизации</string>
    <string name="avatar">avatar</string>
    <string name="notice">напоминание</string>
    <string name="auth_token_table_name">auth_token_table_name</string>
    <string name="connection_error_title">упс… похоже у тебя беда с интернетом</string>
    <string name="ignore">игнорировать</string>
    <string name="authorize">авторизоваться</string>
    <string name="warning2">вы всегда сможете вернуться сюда и авторизоваться</string>
    <string name="warning">предупреждение</string>
    <string name="warning_content">неавторизованные юзеры не смогут синхронизировать свои ToDo по облаку</string>
    <string name="successfully_synchronized">синхронизировано</string>
    <string name="show_cashed_todos_text">я поищу закэшированные ToDo, но они могут быть неактуальными</string>
    <string name="connection_error_message">я смогу синхронизировать твои заметки как только ты вновь подключишься к интернету</string>
</resources>