<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@drawable/custom_bottom_menu_rounded_back"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/custom_bottom_menu_title"
        android:textSize="16sp" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/CustomMenuEditTextLayoutStyle"
        android:layout_width="match_parent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputFileName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDeleteOnBottomMenu"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textColor="@color/medium_gray"
            app:cornerRadius="16dp"
            android:backgroundTint="@color/medium_gray"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSaveOnBottomMenu"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/OkText"
            app:cornerRadius="16dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>